// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`operational time period configuration hooks can use current interval with buffer 1`] = `
<div>
  {"startTimeSecs":-700,"endTimeSecs":1300}
</div>
`;

exports[`operational time period configuration hooks can use effective time 1`] = `"0.25"`;

exports[`operational time period configuration hooks can use operational time period configuration 1`] = `"{"timeRange":{"startTimeSecs":-1,"endTimeSecs":-1},"operationalTimePeriodConfigurationQuery":{"data":{}}}"`;

exports[`operational time period configuration hooks can use operational time period configuration 2`] = `"{"timeRange":{"startTimeSecs":-99.75,"endTimeSecs":-199.75},"operationalTimePeriodConfigurationQuery":{"data":{"operationalPeriodStart":100,"operationalPeriodEnd":200}}}"`;

exports[`operational time period configuration hooks can use operational time period time range 1`] = `
<div>
  {"startTimeSecs":50,"endTimeSecs":-150}
</div>
`;

exports[`operational time period configuration hooks can use operational time period time range 2`] = `
<div>
  {"startTimeSecs":-1,"endTimeSecs":-1}
</div>
`;

exports[`operational time period configuration hooks can use undefined current interval with buffer 1`] = `
<div>
  {"startTimeSecs":null,"endTimeSecs":null}
</div>
`;
